# api_test

./: Cargo.toml  Makefile.toml
crates/back/: Cargo.toml
crates/back/src/: errors.rs  main.rs  routes.rs
crates/back/src/utils/: mod.rs
crates/back/src/views/: auth.rs  pages.rs
crates/communities/: Cargo.toml
crates/communities/migrations/2022-07-09-150450_яя/: up.sql
crates/communities/migrations/2022-07-09-151115_gg/: up.sql
crates/communities/src/: main.rs  schema.rs
crates/communities/src/models/: community.rs  mod.rs
crates/communities/src/utils/: community.rs  mod.rs
crates/communities/src/views/: pages.rs
crates/files/: Cargo.toml
crates/files/src/: main.rs
crates/files/src/views/: pages.rs
crates/front/: Cargo.toml  Trunk.toml  index.html
crates/front/src/: error.rs  main.rs  routes.rs
crates/front/src/models/: mod.rs  user.rs
crates/front/src/pages/: login.rs  profile.rs
crates/front/src/sections/: footer.rs  header.rs
crates/front/src/utils/: error_to_str.rs  image.rs  mod.rs  not_found.rs  requests.rs
crates/front/src/views/: auth.rs  mod.rs  pages.rs
crates/front/style/: style.scss
crates/other/: Cargo.toml
crates/other/src/: main.rs  schema.rs
crates/posts/: Cargo.toml
crates/posts/src/: main.rs  schema.rs
crates/users/: .env  Cargo.toml
crates/users/migrations/2022-07-09-123157_cc/: up.sql
crates/users/migrations/2022-07-09-134007_vv/: up.sql
crates/users/migrations/2022-07-12-184701_gg/: up.sql
crates/users/src/: main.rs  routes.rs  schema.rs
crates/users/src/config/: crypto.rs  mod.rs
crates/users/src/handlers/: major_handlers.rs  mod.rs  user_handlers.rs
crates/users/src/models/: lists.rs  mod.rs  other.rs  rb_user.rs  user.rs
crates/users/src/models/sql/: users.sql
crates/users/src/repositories/: mod.rs  user_repository.rs
crates/users/src/utils/: lists.rs  mod.rs  profile.rs  settings.rs
crates/users/src/views/: pages.rs  progs.rs
(+24 files in other folders)
