[package]
name = "back"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.6.1"
actix-rt = "2"
reqwest = "*"
argonautica = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
actix-session = "0.5"
actix-redis = "0.10"
