[package]
name = "back"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.6.1"
actix-rt = "2"
reqwest = "*"
argonautica = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
actix-session = "0.5"
actix-redis = "0.10"
derive_more = "0.99.5"
actix-multipart = "0.4.0-beta.12"
futures = "0.3.21"
actix-form-data = "0.6.2"
futures-util = "0.3.21"
dotenv = "0.15.0"
