[package]
name = "users"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.0.1"
actix-cors= "0.6.1"
actix-web-httpauth = "0.6.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bcrypt = "0.12.1"
simple_logger = "2.1.0"
log = "0.4.16"
jsonwebtoken = "8.1.0"
rbson = "2.0.3"
config = "0.13.0"
dotenv = "0.15.0"
rbatis = {version = "3.1.6", features = ["postgres"]}
chrono = "0.4.19"
argonautica = "0.2.0"
